# Icfes-OS

./: .env.example  .gitignore  Makefile  README.md  Whitepaper.md  docker-compose.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py  0002_ingestion_candidates.py
apps/api/scripts/: import_jsonl.py  ingest_pdf.py  seed.py
apps/api/src/: __init__.py  main.py
apps/api/src/api/routes/: analytics.py  attempts.py  documents.py  health.py  practice.py  questions.py  recommendations.py  search.py  tutor.py
apps/api/src/core/: config.py  database.py  security.py
apps/api/src/models/: __init__.py  attempt.py  classification.py  document.py  document_page.py  question.py  question_candidate.py  study.py  vector.py
apps/api/src/repositories/: analytics.py  attempts.py  documents.py  questions.py
apps/api/src/schemas/: analytics.py  attempt.py  classification.py  document.py  question.py  study.py
apps/api/src/services/: analytics_service.py  candidate_service.py  classification_service.py  embeddings_service.py  practice_service.py  recommender_service.py  sample_data.py  scoring_service.py  search_service.py  spaced_repetition_service.py  taxonomy.py  tutor_service.py
apps/api/src/services/ai/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  prompts.py
apps/api/src/services/ingestion/: __init__.py  csv_importer.py  jsonl_importer.py  pdf_extractor.py  (+1 more)
apps/api/tests/: test_importer.py  test_phase_2a_ingestion.py  test_recommender.py  test_scoring.py
docs/: API.md  (+5 more)
(+27 files in other folders)
