[project]
name = "icfes-os-api"
version = "0.1.0"
description = "FastAPI backend for ICFES OS"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.2",
  "anthropic>=0.39.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.2",
  "openai>=1.55.0",
  "pandas>=2.2.2",
  "pgvector>=0.3.6",
  "psycopg[binary]>=3.2.3",
  "pydantic>=2.9.2",
  "pydantic-settings>=2.6.1",
  "pymupdf>=1.24.13",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.12",
  "sqlalchemy>=2.0.35",
  "uvicorn[standard]>=0.32.0"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "ruff>=0.7.4"
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "E501", "UP017"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
